BestDoctor вроде работает

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,36 @@
-# DB
-spring.datasource.url=jdbc:postgresql://localhost:5432/dms
-spring.datasource.username=postgres
-spring.datasource.password=hfphf,jnrf
-
-## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-
-# JPA / HIBERNATE
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+## DB
+#spring.datasource.url=jdbc:postgresql://localhost:5432/dms
+#spring.datasource.username=postgres
+#spring.datasource.password=hfphf,jnrf
+#
+### default connection pool
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=5
+#
+## JPA / HIBERNATE
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 
 # EMAIL
+#spring.mail.host=smtp.yandex.ru
+#spring.mail.port=587
+#spring.mail.username=olegzhdanov1@yandex.ru
+#spring.mail.password=vombat51
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring.mail.host=smtp.yandex.ru
 spring.mail.port=587
-spring.mail.username=olegzhdanov1@yandex.ru
-spring.mail.password=vombat51
+spring.mail.username=info@denttime.ru
+spring.mail.password=23Ja8Uq(
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+mail.mime.encodeparameters=false
+mail.mime.charset=utf-8
+
+
 file.download.location=D:\\temp\\mail
 mail.folder.name=FOO
+
+storage.bestdoctor=D:\\temp\\mail\\BestDoctor.xlsx
