--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,11 @@ spring.mail.password=23Ja8Uq(
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+logging.level.org.springframework.web=INFO
+#logging.level.org.hibernate=ERROR
+logging.level.net.guides=DEBUG
+logging.file.name=logs/dms.log
+
 mail.mime.encodeparameters=false
 mail.mime.charset=utf-8
 
