Изменён шаблон название файлов для альфастрахования

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,8 +38,8 @@ alfastrah:
   liststemplate: "СПИСКИ"
   attachlisttemplate: "ПРИКРЕПЛЕНИЕ"
   deattachlisttemplate: "ОТКРЕПЛЕНИЕ"
-  attachfiletemplate: "prikr"
-  deattachfiletemplate: "snyat"
+  attachfiletemplate: "_prikr"
+  deattachfiletemplate: "_snyat"
 
 rosgosstrah:
   storage: "RosGosStrah.xlsx"
